--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,12 +14,6 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:300,400,700"
       rel="stylesheet"
     />
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <header class="hero">
     <div class="container">
@@ -40,11 +34,9 @@
             <ul class="main-nav">
               <li><a href="index.html">Inicio</a></li>
               <li><a href="https://zoniak.github.io/materiales.html">Material</a></li>
-              <!-- <li><a href="#">About</a></li> -->
               <li><a href="mailto:angelgarciacaparros@gmail.com">Contacto</a></li>
             </ul>
           </nav>
-          <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
           <div class="hero-text">
             <h1><span>Hola!! soy</span><br />Ángel García.</h1>
             <h3>Profesor de informática de Cartagena</h3>
@@ -73,7 +65,6 @@
             <h1 class="heading purple">
               <span class="purple">mi</span> experiencia <br />trabajando en el sector
             </h1>
-            <!-- Swiper -->
             <div class="swiper-container client-swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide client-box">
@@ -106,15 +97,12 @@
                 </div>
               </div>
             </div>
-            <!-- Add Arrows -->
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- Footer -->
     <footer>
       <div class="container-fluid">
         <div class="row footer">
@@ -132,11 +120,8 @@
         </div>
       </div>
     </footer>
-
-    <!-- Some Javascript -->
     <script src="js/jquery-2.1.1.js"></script>
     <script src="js/swiper.jquery.min.js"></script>
-    <!-- Initialize Client Swiper -->
     <script>
       var swiper1 = new Swiper(".client-swiper", {
         slidesPerView: 3,
@@ -144,27 +129,22 @@
         nextButton: ".swiper-button-next",
         prevButton: ".swiper-button-prev",
         spaceBetween: 60,
-        // Responsive breakpoints
         breakpoints: {
-          // when window width is <= 320px
           320: {
             slidesPerView: 1,
             spaceBetween: 10,
             pagination: ".swiper-pagination",
           },
-          // when window width is <= 480px
           480: {
             slidesPerView: 1,
             spaceBetween: 20,
           },
-          // when window width is <= 640px
           640: {
             slidesPerView: 1,
             spaceBetween: 30,
           },
         },
       });
-      // Initialize Testimonial Swiper
       var swiper2 = new Swiper(".testimonial-swiper", {
         slidesPerView: 3,
         pagination: ".swiper-pagination",
@@ -173,17 +153,14 @@
         grabCursor: true,
         freeMode: true,
         breakpoints: {
-          // when window width is <= 320px
           320: {
             slidesPerView: 1,
             spaceBetween: 10,
           },
-          // when window width is <= 480px
           480: {
             slidesPerView: 1,
             spaceBetween: 10,
           },
-          // when window width is <= 640px
           640: {
             slidesPerView: 1,
             spaceBetween: 10,
@@ -194,18 +171,14 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
     <script>
-      // Counterup
       $(".counter").counterUp({
         time: 1000,
       });
 
-      // Main Navigation
       $("#menu-toggle").click(function () {
         $(this).toggleClass("open"), $(".main-nav").toggleClass("show-it");
       });
     </script>
-
-    <!-- Google Analytics - You should remove this -->
     <script>
       (function (i, s, o, g, r, a, m) {
         i["GoogleAnalyticsObject"] = r;
@@ -226,7 +199,6 @@
         "https://www.google-analytics.com/analytics.js",
         "ga"
       );
-
       ga("create", "UA-29231762-2", "auto");
       ga("send", "pageview");
     </script>
