Eliminación de espacios innecesarios e insercción de nuevos saltos de línea para mejor legibilidad

--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/nuclearDisarment.ico">
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/bootstrap-theme.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/swiper.min.css" />
-    <link href="css/style.css" rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:300,400,700"
-      rel="stylesheet"
-    />
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/bootstrap-theme.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/swiper.min.css"/>
+    <link href="css/style.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:300,400,700" rel="stylesheet"/>
   </head>
+
   <header class="hero">
     <div class="container">
       <div class="row">
@@ -37,18 +35,19 @@
               <li><a href="mailto:angelgarciacaparros@gmail.com">Contacto</a></li>
             </ul>
           </nav>
+
           <div class="hero-text">
-            <h1><span>Hola!! soy</span><br />Ángel García.</h1>
+            <h1><span>Hola!! soy</span><br/>Ángel García.</h1>
             <h3>Profesor de informática de Cartagena</h3>
             <a href="https://www.youtube.com/watch?v=L5sw9ITJORY&ab_channel=QuocMinh" class="btn btn-lg btn-info">Conoceme!</a>
             <ul class="social-links">
               <li class="label">Encuentrame aqui :)</li>
 
               <li>
-                <a href="https://www.linkedin.com/in/angelgarciacaparros/"><img src="assets/linkedin.png" /></a>
+                <a href="https://www.linkedin.com/in/angelgarciacaparros/"><img src="assets/linkedin.png"/></a>
               </li>
               <li>
-                <a href="https://github.com/zoniak?tab=repositories"><img src="assets/github.png" /></a>
+                <a href="https://github.com/zoniak?tab=repositories"><img src="assets/github.png"/></a>
               </li>
             </ul>
           </div>
@@ -56,6 +55,7 @@
       </div>
     </div>
   </header>
+
   <body>
     <section class="case-study">
       <div class="container">
@@ -63,33 +63,33 @@
           <div class="col-md-12">
             <h4 class="sub-heading">Conoce</h4>
             <h1 class="heading purple">
-              <span class="purple">mi</span> experiencia <br />trabajando en el sector
+              <span class="purple">mi</span> experiencia <br/>trabajando en el sector
             </h1>
             <div class="swiper-container client-swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide client-box">
-                  <img src="assets/logo-2.png" class="client-logo" />
+                  <img src="assets/logo-2.png" class="client-logo"/>
                   <h3 class="text-left title">
                     Profesor de Grado Superior de Desarrollo Web y Multiplataforma
                   </h3>
                   <p class="text-left tag">IES Hermenegildo Lanz, Granada</p>
                 </div>
                 <div class="swiper-slide client-box">
-                  <img src="assets/logo-1.png" class="client-logo" />
+                  <img src="assets/logo-1.png" class="client-logo"/>
                   <h3 class="text-left title">
                   Personal Docente Investigador de la UGR
                   </h3>
                   <p class="text-left tag">Universidad de Granada, Granada</p>
                 </div>
                 <div class="swiper-slide client-box">
-                  <img src="assets/logo-3.png" class="client-logo" />
+                  <img src="assets/logo-3.png" class="client-logo"/>
                   <h3 class="text-left title">
                     Profesor de Grado Medio y Superior de Informática
                   </h3>
                   <p class="text-left tag">Atlantida, Granada</p>          
                 </div>
                 <div class="swiper-slide client-box">
-                  <img src="assets/logo-2.png" class="client-logo" />
+                  <img src="assets/logo-2.png" class="client-logo"/>
                   <h3 class="text-left title">
                     Practicas de profesor de Informática
                   </h3>
@@ -103,25 +103,28 @@
         </div>
       </div>
     </section>
+
     <footer>
       <div class="container-fluid">
         <div class="row footer">
           <div class="col-md-12 text-center">
-            <h1>Ángel<br /><span>García</span></h1>
+            <h1>Ángel<br/><span>García</span></h1>
             <ul class="social-links">
               <li>
-                <a href="https://www.linkedin.com/in/angelgarciacaparros/"><img src="assets/linkedin.png" /></a>
+                <a href="https://www.linkedin.com/in/angelgarciacaparros/"><img src="assets/linkedin.png"/></a>
               </li>
               <li>
-                <a href="https://github.com/zoniak?tab=repositories"><img src="assets/github.png" /></a>
+                <a href="https://github.com/zoniak?tab=repositories"><img src="assets/github.png"/></a>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </footer>
+
     <script src="js/jquery-2.1.1.js"></script>
     <script src="js/swiper.jquery.min.js"></script>
+
     <script>
       var swiper1 = new Swiper(".client-swiper", {
         slidesPerView: 3,
@@ -168,8 +171,10 @@
         },
       });
     </script>
+
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
+
     <script>
       $(".counter").counterUp({
         time: 1000,
@@ -202,5 +207,6 @@
       ga("create", "UA-29231762-2", "auto");
       ga("send", "pageview");
     </script>
+
   </body>
 </html>
