Correciones de faltas de ortografía y cambios menores en el texto

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="hero-text">
             <h1><span>Hola!! soy</span><br/>Ángel García.</h1>
             <h3>Profesor de informática de Cartagena</h3>
-            <a href="https://www.youtube.com/watch?v=L5sw9ITJORY&ab_channel=QuocMinh" class="btn btn-lg btn-info">Conoceme!</a>
+            <a href="https://www.youtube.com/watch?v=L5sw9ITJORY&ab_channel=QuocMinh" class="btn btn-lg btn-info">¡Conoceme!</a>
             <ul class="social-links">
               <li class="label">Encuentrame aqui :)</li>
 
@@ -63,7 +63,7 @@
           <div class="col-md-12">
             <h4 class="sub-heading">Conoce</h4>
             <h1 class="heading purple">
-              <span class="purple">mi</span> experiencia <br/>trabajando en el sector
+              <span class="purple">Mi experiencia</span>  <br/>trabajando en el sector
             </h1>
             <div class="swiper-container client-swiper">
               <div class="swiper-wrapper">
