--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       rel="stylesheet"
     />
   </head>
-
   <header class="hero">
     <div class="container">
       <div class="row">
@@ -43,7 +42,7 @@
             <h3>Profesor de informática de Cartagena</h3>
             <a href="https://www.youtube.com/watch?v=L5sw9ITJORY&ab_channel=QuocMinh" class="btn btn-lg btn-info">¡Conoceme!</a>
             <ul class="social-links">
-              <li class="label">Encuentrame aqui :)</li>
+              <li class="label">Encuentrame aqui &#128521</li>
 
               <li>
                 <a href="https://www.linkedin.com/in/angelgarciacaparros/"><img src="assets/linkedin.png"/></a>
@@ -57,7 +56,6 @@
       </div>
     </div>
   </header>
-
   <body>
     <section class="case-study">
       <div class="container">
@@ -105,7 +103,6 @@
         </div>
       </div>
     </section>
-
     <footer>
       <div class="container-fluid">
         <div class="row footer">
@@ -123,7 +120,6 @@
         </div>
       </div>
     </footer>
-
     <script src="js/jquery-2.1.1.js"></script>
     <script src="js/swiper.jquery.min.js"></script>
     <script>
@@ -172,10 +168,8 @@
         },
       });
     </script>
-
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
-
     <script>
       $(".counter").counterUp({
         time: 1000,
