Cambio del portafolio para Sergio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Portfolio</title>
+    <title>Sergio Cortés García - Inicio</title>
     <link rel="icon" type="image/x-icon" href="assets/nuclearDisarment.ico">
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/bootstrap-theme.css" rel="stylesheet" />
@@ -33,22 +33,21 @@
             </div>
             <ul class="main-nav">
               <li><a href="index.html">Inicio</a></li>
-              <li><a href="https://zoniak.github.io/materiales.html">Material</a></li>
-              <li><a href="mailto:angelgarciacaparros@gmail.com">Contacto</a></li>
+              <li><a href="#sobreMi">Sobre mí</a></li>
+              <li><a href="mailto:sergiocortes1603@gmail.com">Contacto</a></li>
             </ul>
           </nav>
           <div class="hero-text">
-            <h1><span>Hola!! soy</span><br/>Ángel García.</h1>
-            <h3>Profesor de informática de Cartagena</h3>
-            <a href="https://www.youtube.com/watch?v=L5sw9ITJORY&ab_channel=QuocMinh" class="btn btn-lg btn-info">¡Conoceme!</a>
+            <h1><span>Bienvenido</span><br/>Soy Sergio Cortés</h1>
+            <h3>Estudiante de informática en el I.E.S. Politécnico Hermenegildo Lanz</h3>
+            <a href="#sobreMi" class="btn btn-lg btn-info">Sobre mí</a>
             <ul class="social-links">
-              <li class="label">Encuentrame aqui &#128521</li>
-
+              <li class="label">Mis redes sociales</li>
               <li>
-                <a href="https://www.linkedin.com/in/angelgarciacaparros/"><img src="assets/linkedin.png"/></a>
+                <a href="https://www.linkedin.com/in/sergio-cortes-1603-spain/"><img src="assets/linkedin.png"/></a>
               </li>
               <li>
-                <a href="https://github.com/zoniak?tab=repositories"><img src="assets/github.png"/></a>
+                <a href="https://github.com/srgcg6"><img src="assets/github.png"/></a>
               </li>
             </ul>
           </div>
@@ -61,39 +60,39 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h4 class="sub-heading">Conoce</h4>
+            <h4 class="sub-heading">Sobre mí</h4>
             <h1 class="heading purple">
-              <span class="purple">Mi experiencia</span>  <br/>trabajando en el sector
+              <span class="purple" id="sobreMi">Mis estudios</span>
             </h1>
             <div class="swiper-container client-swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide client-box">
                   <img src="assets/logo-2.png" class="client-logo"/>
                   <h3 class="text-left title">
-                    Profesor de Grado Superior de Desarrollo Web y Multiplataforma
+                    Educación Secundaria Obligatoria
                   </h3>
-                  <p class="text-left tag">IES Hermenegildo Lanz, Granada</p>
+                  <p class="text-left tag">I.E.S. Escultor Sánchez Mesa, Granada</p>
                 </div>
                 <div class="swiper-slide client-box">
                   <img src="assets/logo-1.png" class="client-logo"/>
                   <h3 class="text-left title">
-                  Personal Docente Investigador de la UGR
+                  Certificados de CISCO sobre Linux, redes y Packet Tracer
                   </h3>
-                  <p class="text-left tag">Universidad de Granada, Granada</p>
+                  <p class="text-left tag">I.E.S. Politécnico Hermenegildo Lanz, Granada</p>
                 </div>
                 <div class="swiper-slide client-box">
                   <img src="assets/logo-3.png" class="client-logo"/>
                   <h3 class="text-left title">
-                    Profesor de Grado Medio y Superior de Informática
+                    Grado Medio de Sistemas Microinformáticos y Redes
                   </h3>
-                  <p class="text-left tag">Atlantida, Granada</p>          
+                  <p class="text-left tag">I.E.S. Politécnico Hermenegildo Lanz, Granada</p>          
                 </div>
                 <div class="swiper-slide client-box">
-                  <img src="assets/logo-2.png" class="client-logo"/>
+                  <img src="assets/logo-4.png" class="client-logo"/>
                   <h3 class="text-left title">
-                    Practicas de profesor de Informática
+                    Practicas presenciales en Hitachi Rail GTS Deutschland
                   </h3>
-                  <p class="text-left tag">IES Soto de Rojas, Granada</p>          
+                  <p class="text-left tag">Schützenstraße 25, Berlín, Alemania</p>          
                 </div>
               </div>
             </div>
@@ -107,13 +106,13 @@
       <div class="container-fluid">
         <div class="row footer">
           <div class="col-md-12 text-center">
-            <h1>Ángel<br/><span>García</span></h1>
+            <h1>Sergio<br/><span>Cortés García</span></h1>
             <ul class="social-links">
               <li>
-                <a href="https://www.linkedin.com/in/angelgarciacaparros/"><img src="assets/linkedin.png"/></a>
+                <a href="https://www.linkedin.com/in/sergio-cortes-1603-spain/"><img src="assets/linkedin.png"/></a>
               </li>
               <li>
-                <a href="https://github.com/zoniak?tab=repositories"><img src="assets/github.png"/></a>
+                <a href="https://github.com/srgcg6"><img src="assets/github.png"/></a>
               </li>
             </ul>
           </div>
